# KaggleSlayer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  DASHBOARD_FEATURES.md  Dockerfile  FILE_STRUCTURE.md  FINAL_RESULTS_SUMMARY.md  GOALS.md  MAJOR_FIXES_SUMMARY.md  PIPELINE_DOCUMENTATION.md  PIPELINE_IMPROVEMENTS_REPORT.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  SIMPLIFICATION_SUMMARY.md  __init__.py  app.py  config.yaml  docker-compose.yml  download_all_competitions.py  kaggle_slayer.py  notebook.ipynb  pyproject.toml  requirements.txt  run_data_scout.py  run_pipeline.py  test_app.py  test_llm_setup.py  test_pipeline_comprehensive.py
.claude/: settings.json  settings.local.json
.claude/agents/: harness-reviewer.md
.claude/commands/: gates.md  harness-review.md  new-adr.md  solve.md
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  baseline_model.py  competition_reader.py  coordinator.py  data_scout.py  feature_engineer.py  feedback_analyzer.py  get_competitions.py  llm_coordinator.py  model_selector.py  pipeline_coordinator.py  submitter.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
competition_data/digit-recognizer/results/: data_scout_results.json  feature_engineer_results.json  model_selector_results.json  pipeline_results.json
competition_data/playground-series-s5e9/results/: data_scout_results.json  feature_engineer_results.json  model_selector_results.json  pipeline_results.json
competition_data/titanic/results/: data_scout_results.json  feature_engineer_results.json  model_selector_results.json  pipeline_results.json
core/: __init__.py
core/analysis/: __init__.py  insights.py  performance.py
core/data/: loaders.py  preprocessors.py
core/features/: __init__.py  generators.py  selector.py  selectors.py  transformers.py
core/models/: __init__.py  ensembles.py  evaluators.py  factory.py  optimizers.py
dashboard/: __init__.py  app.py
docs/: V1_KICKOFF.md  architecture.md
docs/adr/: 0001-harness-agent-trust-split.md  0002-leak-free-cv-contract.md  0003-checkpoint-gate-on-submissions.md  0004-append-only-journal-resume.md  0005-telemetry-never-crashes.md  0006-gemini-retrying-client-cost-ledger.md  README.md  template.md
docs/media/: README.md
docs/superpowers/plans/: 2026-05-14-week1-foundations.md  2026-05-14-week2-workspace-kaggle-llm.md  2026-05-14-week3-solver-and-tools.md  2026-05-15-week4-checkpoint-resume-sandbox.md  2026-05-17-week5-telemetry-dashboard-chaos.md  2026-06-04-auto-download-competition-data.md  2026-06-10-documentation-suite.md
docs/superpowers/specs/: 2026-05-14-llm-agent-harness-design.md  2026-06-04-auto-download-competition-data-design.md  2026-06-10-documentation-suite-design.md
kaggle_slayer/: __init__.py  cli.py
kaggle_slayer/agent/: __init__.py  cost_ledger.py  llm_client.py  retrying_client.py  solver.py  tools.py
kaggle_slayer/agent/handlers/: __init__.py  files.py  ml.py  python.py
kaggle_slayer/agent/prompts/: __init__.py  system.md
kaggle_slayer/dashboard/: __init__.py  app.py  comp_detail.py  portfolio.py
kaggle_slayer/harness/: __init__.py  checkpoints.py  context.py  cv.py  data.py  journal.py  kaggle_client.py  resume.py  sandbox.py  workspace.py
kaggle_slayer/harness/registry/: __init__.py  cv_strategies.py  metrics.py
kaggle_slayer/harness/telemetry/: __init__.py  behavior.py  calibration.py  errors.py  mlflow_logger.py  otel.py
legacy/agents/: coordinator.py
legacy/core/data/: __init__.py  loaders.py  validators.py
legacy/core/features/: __init__.py  generators.py  selectors.py  transformers.py  utils.py
legacy/core/models/: ensembles.py  factory.py  optimizers.py
legacy/tests/: test_config.py  test_models.py  test_pipeline_e2e.py
legacy/utils/: config.py  io.py  kaggle_api.py  tracking.py
llm_logs/: llm_cache.json
scripts/: __init__.py  download_competition.py  preflight.py  run_data_scout.py  run_pipeline.py
tests/: conftest.py  test_data.py  test_llm_connection.py  test_llm_simple.py  test_pipeline_simple.py
tests/chaos/: __init__.py  conftest.py  test_solver_chaos.py
tests/fixtures/: fake_llm.py  fe_stub.py  model_stub.py  synthetic_comp.py
tests/integration/: test_checkpoint_flow.py  test_cv_with_stubs.py  test_real_apis.py  test_resume_flow.py  test_solver_real_gemini.py  test_solver_real_gemini_checkpoint.py  test_solver_real_gemini_telemetry.py  test_solver_with_fake_agent.py  test_week1_acceptance.py  test_workspace_with_fake_agent.py
tests/unit/: test_builtin_registry.py  test_checkpoints.py  test_cli.py  test_context_builder.py  test_cost_ledger.py  test_cv_contract.py  test_cv_strategies_registry.py  test_dashboard_app.py  test_dashboard_comp_detail.py  test_dashboard_portfolio.py  test_data.py  test_fake_llm.py  test_fixtures.py  test_gemini_tool_protocol.py  test_handlers_files.py  test_handlers_ml.py  test_handlers_python.py  test_handlers_request_approval.py  test_handlers_set_metric.py  test_handlers_submit_kaggle.py  test_kaggle_client.py  test_llm_client.py  test_metrics_registry.py  test_package_layout.py  test_resume_rebuild.py  test_retrying_client.py  test_sandbox_lint.py  test_sandbox_subprocess.py  test_solver.py  test_telemetry_behavior.py  test_telemetry_calibration.py  test_telemetry_errors.py  test_telemetry_mlflow.py  test_telemetry_otel.py  test_tool_registry.py  test_workspace.py  test_workspace_journal.py  test_workspace_resume.py  test_workspace_versioning.py
utils/: __init__.py  cache.py  config.py  exceptions.py  io.py  llm_utils.py  logging.py  performance.py
utils/llm/: __init__.py  client.py  coordinator.py
