[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-slayer"
version = "1.0.0"
description = "AutoML pipeline for tabular Kaggle competitions with leak-free CV, MLflow tracking, and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rodrigo Medeiros" }]
keywords = ["automl", "kaggle", "machine-learning", "mlops", "tabular", "mlflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.2.0",
    "catboost>=1.0.0",
    "optuna>=2.10.0",
    "kaggle>=1.5.12",
    "pyarrow>=5.0.0",
    "pyyaml>=5.4.0",
    "joblib>=1.0.0",
    "psutil>=5.8.0",
    "mlflow>=2.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "matplotlib>=3.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
kaggle-slayer = "kaggle_slayer:main"

[project.urls]
Homepage = "https://github.com/rodme02/KaggleSlayer"
Repository = "https://github.com/rodme02/KaggleSlayer"
Issues = "https://github.com/rodme02/KaggleSlayer/issues"

[tool.setuptools.packages.find]
include = ["agents*", "core*", "utils*", "dashboard*"]
exclude = ["tests*", "scripts*", "competition_data*"]

[tool.setuptools]
py-modules = ["kaggle_slayer"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
    "slow: end-to-end / slower tests (run with `-m slow`)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
