[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-slayer"
version = "2.0.0a1"
description = "LLM-agent harness for tabular Kaggle competitions with leak-free CV."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Rodrigo Medeiros" }]
keywords = ["kaggle", "llm-agent", "automl", "mlops", "tabular"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "rich>=13.0",
    "kaggle>=1.6",
    "mlflow>=2.10",
    "google-genai>=0.3",
    "jsonschema>=4.21",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "optuna>=3.5",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
kaggle-slayer = "kaggle_slayer.cli:main"
kaggle-slayer-dashboard = "kaggle_slayer.dashboard.app:main"

[project.urls]
Homepage = "https://github.com/rodme02/KaggleSlayer"
Repository = "https://github.com/rodme02/KaggleSlayer"

[tool.setuptools.packages.find]
include = ["kaggle_slayer*"]
exclude = ["tests*", "competitions*", "docs*"]

[tool.setuptools.package-data]
# load_system_prompt() reads this at runtime; without it non-editable
# installs (built wheels) crash on the first Solver call.
kaggle_slayer = ["agent/prompts/*.md"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
files = ["kaggle_slayer/harness", "kaggle_slayer/agent"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
    "slow: end-to-end / slower tests (run with -m slow)",
    "integration: integration tests with fake agent (faster than slow)",
    "chaos: chaos tier — integration tests with injected tool/LLM failures",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
